Last modifications@ git add

--- a/data_exploration/explore_MRegularSeason.ipynb
+++ b/data_exploration/explore_MRegularSeason.ipynb
@@ -109120,6 +109120,75 @@
     "    print(f\"Season: {season}, train {model.score(x_train, y_train)}\")\n",
     "    print(f\"Season: {season}, test {model.score(x_test, y_test)}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a model using XGBoost and hyperparameter tunning\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a model using XGBoost and hyperparameter tunning\n",
+    "import pandas as pd\n",
+    "import xgboost as xgb\n",
+    "from sklearn.model_selection import GridSearchCV, train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load the data\n",
+    "agg_MRegularSeasonDetailedResults = pd.read_csv(\"../data/AggRegularSeasonFiltered.csv\")\n",
+    "agg_MRegularSeasonDetailedResults['Result'] = agg_MRegularSeasonDetailedResults['Result'].apply(lambda x: 0 if x == 'A' else 1)\n",
+    "\n",
+    "# Separate X, Y for training\n",
+    "X = agg_MRegularSeasonDetailedResults.drop(columns=['Season', 'DayNum', 'TeamA', 'TeamB', 'Result'])\n",
+    "\n",
+    "Y = agg_MRegularSeasonDetailedResults['Result']\n",
+    "\n",
+    "# train test spllt\n",
+    "x_train, x_test, y_train, y_test = train_test_split(X, Y, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Create a model\n",
+    "model = xgb.XGBClassifier()\n",
+    "\n",
+    "# Define the hyperparameters to tune\n",
+    "param_grid = {\n",
+    "    'n_estimators': [100, 200, 300],\n",
+    "    'max_depth': [3, 4, 5],\n",
+    "    'learning_rate': [0.1, 0.01, 0.001]\n",
+    "}\n",
+    "\n",
+    "# Create a grid search object\n",
+    "grid_search = GridSearchCV(model, param_grid, cv=5, n_jobs=-1, verbose=2)\n",
+    "\n",
+    "# Fit the grid search object to the data\n",
+    "grid_search.fit(x_train, y_train)\n",
+    "\n",
+    "# Get the best hyperparameters\n",
+    "best_params = grid_search.best_params_\n",
+    "\n",
+    "# Create a new model with the best hyperparameters\n",
+    "best_model = xgb.XGBClassifier(**best_params)\n",
+    "\n",
+    "# Fit the new model to the data\n",
+    "best_model.fit(x_train, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "train_preds = best_model.predict(x_train)\n",
+    "test_preds = best_model.predict(x_test)\n",
+    "\n",
+    "# Calculate the accuracy of the model\n",
+    "train_accuracy = accuracy_score(y_train, train_preds)\n",
+    "test_accuracy = accuracy_score(y_test, test_preds)\n",
+    "\n",
+    "print(f'Train accuracy: {train_accuracy}')\n",
+    "print(f'Test accuracy: {test_accuracy}')\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
