Added src files

--- a/compute_bracket.ipynb
+++ b/compute_bracket.ipynb
@@ -509,7 +509,7 @@
     "def predict_ncaa_bracket(bracket, season_data, model):\n",
     "    for i in range(len(bracket)):\n",
     "        game = bracket.loc[i, :]\n",
-    "        teamA, teamB, game_name, conference= game['TeamA'], game['TeamB'], game['Game'], game['Conference']\n",
+    "        teamA, teamB, game_name, conference = game['TeamA'], game['TeamB'], game['Game'], game['Conference']\n",
     "        print(f\"Game: - {game_name}     Teams: {teamA} vs {teamB}\")\n",
     "        game_data = pregame_data(teamA=teamA, teamB=teamB, data=season_data, columns=season_data.columns)\n",
     "        winner = generate_prediction(game_data=game_data, model=model)\n",
@@ -1101,6 +1101,19 @@
     "brk.generate_graph(column_identifiers=['TeamAName', 'TeamBName'])\n",
     "brk.plot(ax)\n",
     "plt.savefig(\"bracket_plot/plot.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(\"data/MMedianSeasonAggStreak_2.csv\")\n",
+    "\n",
+    "df[df[\"Result\"] == 0].sum()\n"
    ]
   },
   {
