--- a/compute_bracket.ipynb
+++ b/compute_bracket.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -16,13 +16,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Raul\\AppData\\Local\\Temp\\ipykernel_13512\\2862113002.py:7: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5211/2862113002.py:7: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  seed['Conference'] = seed['Seed'].str.slice(0,1)\n",
-      "C:\\Users\\Raul\\AppData\\Local\\Temp\\ipykernel_13512\\2862113002.py:8: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5211/2862113002.py:8: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +298,7 @@
        "56  0611_0314_0710_0215  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -404,36 +404,36 @@
        "      <td>1192.0</td>\n",
        "      <td>None</td>\n",
        "      <td>13.0</td>\n",
-       "      <td>2.071429</td>\n",
-       "      <td>0.378378</td>\n",
-       "      <td>0.605634</td>\n",
+       "      <td>1.75</td>\n",
+       "      <td>0.37037</td>\n",
+       "      <td>0.584615</td>\n",
+       "      <td>0.459459</td>\n",
+       "      <td>0.405405</td>\n",
+       "      <td>18.5</td>\n",
+       "      <td>1.190909</td>\n",
+       "      <td>0.256777</td>\n",
+       "      <td>0.481517</td>\n",
+       "      <td>0.394772</td>\n",
        "      <td>0.5</td>\n",
-       "      <td>0.393939</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>1.181818</td>\n",
-       "      <td>0.244444</td>\n",
-       "      <td>0.476923</td>\n",
-       "      <td>0.384615</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>-1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Season  DayNum    Home    Away Result   HPF     HA2TR     HOffR     HAllR  \\\n",
-       "0    2024     137  1345.0  1192.0   None  13.0  2.071429  0.378378  0.605634   \n",
+       "   Season  DayNum    Home    Away Result   HPF  HA2TR    HOffR     HAllR  \\\n",
+       "0    2024     137  1345.0  1192.0   None  13.0   1.75  0.37037  0.584615   \n",
        "\n",
-       "   HFGP      HPFR   APF     AA2TR     AOffR     AAllR      AFGP  APFR  \\\n",
-       "0   0.5  0.393939  18.0  1.181818  0.244444  0.476923  0.384615   0.5   \n",
+       "       HFGP      HPFR   APF     AA2TR     AOffR     AAllR      AFGP  APFR  \\\n",
+       "0  0.459459  0.405405  18.5  1.190909  0.256777  0.481517  0.394772   0.5   \n",
        "\n",
        "   HStreak  AStreak  \n",
-       "0      4.0      1.0  "
+       "0      1.0     -1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +458,7 @@
        "137"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2114,7 +2114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
